--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             </h3>
        </div>
        <div class="container">
-         <h5 id="reviews"></h5>         
+            <h5 id="reviews"></h5>  
+            
+            <h3>Other Properties recommended to you:</h3> 
+            <div class="properties"></div>
        </div>
        <script src="index.pack.js"></script>
    </body>
