Add container for main Image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             </h3>
        </div>
        <div class="container">
+            <div class="main-image"></div>
             <h5 id="reviews"></h5>  
             
             <h3>Other Properties recommended to you:</h3> 
