--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
           <div class="properties"></div>
       </div>
       <div class="footer"></div>
-      <script src="index.pack.js"></script>
+      <script src="./dist/index.pack.js"></script>
    </body>
 </html>
